@@ -2,6 +2,9 @@
     Proc::Simple CHANGES
 ######################################################################
 
+          from 1.21: Added patch by Chip Capelik to provide a wait()
+                     method waiting for a process to terminate.
+
           from 1.20: Added patch by Tobias Jahn <tjahn@users.sourceforge.net>,
                      to redirect STDOUT or STDERR of the child process upon
                      request.
